syntax = "proto3";

package wfa.measurement.internal.kingdom;

import "src/main/proto/wfa/measurement/internal/kingdom/requisition_details.proto";

option java_package = "org.wfanet.measurement.internal.kingdom";
option java_multiple_files = true;

message RequisitionTemplate {
  fixed64 external_data_provider_id = 1;
  fixed64 external_campaign_id = 2;
  RequisitionDetails requisition_details = 3;
}
