syntax = "proto3";

package wfa.measurement.internal;

import "src/main/proto/wfa/measurement/internal/metric_definition.proto";

option java_package = "org.wfa.measurement.internal";
option java_multiple_files = true;

// Used within the Measurement Provider database to serialize details about a
// Requisition.
message RequisitionDetails {
  MetricDefinition metric_definition = 1;
}
